test_scores/negative_dimers/features/P02768.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P02768.pkl.xz